--- a/documentation/kit-framework.mdx
+++ b/documentation/kit-framework.mdx
@@ -35,6 +35,7 @@ import Button from '@mui/material/Button';
 import RocketLaunchIcon from '@mui/icons-material/RocketLaunch';
 import AllInclusiveIcon from '@mui/icons-material/AllInclusive';
 import GradientButton from '@site/src/components/2.0/GradientButton';
+import MenuBookIcon from '@mui/icons-material/MenuBook';
 
 | Status     | Created      | Post-History                           |
 |------------|--------------|----------------------------------------|
@@ -124,6 +125,22 @@ KITs in Eclipse Tractus-X are organized into four main categories, each serving 
   examples={['Manufacturing as a Service KIT', 'Modular Production KIT']}
   color="quaternary"
 />
+
+## KIT Template
+
+Follow the KIT template to have an example of folder structure that can be followed following the [KIT Framework Guide](./kit-framework) and the needed content for each view in order to achieve all requirements from the [KIT Lifecycle](./kit-lifecycle).
+
+<div style={{ display: 'flex', gap: '12px', justifyContent: 'left', marginTop: '20px', marginBottom: '20px', flexWrap: 'wrap' }}>
+  <GradientButton 
+    href="https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/tree/main/docs-kits/kit-template"
+    text="View KIT Template"
+    icon={MenuBookIcon}
+    gradient="linear-gradient(135deg, #667eea 0%, #764ba2 100%)"
+    shadowColor="rgba(102, 126, 234, 0.3)"
+    shadowColorHover="rgba(102, 126, 234, 0.4)"
+    external={true}
+  />
+</div>
 
 ## The KIT Content Structure
 
