--- a/documentation/kit-getting-started.mdx
+++ b/documentation/kit-getting-started.mdx
@@ -251,6 +251,21 @@ Get informed about what are the KITs and how to contribute by reaching out to th
 | KIT Discussions | Offical KIT Proposal and Discussion Location | [KIT Discussions](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/discussions/categories/kits) |
 
 
+### KIT Template
+
+Follow the KIT template to have an example of folder structure that can be followed following the [KIT Framework Guide](./kit-framework) and the needed content for each view in order to achieve all requirements from the [KIT Lifecycle](./kit-lifecycle).
+
+<div style={{ display: 'flex', gap: '12px', justifyContent: 'left', marginTop: '20px', marginBottom: '20px', flexWrap: 'wrap' }}>
+  <GradientButton 
+    href="https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/tree/main/docs-kits/kit-template"
+    text="View KIT Template"
+    icon={MenuBookIcon}
+    gradient="linear-gradient(135deg, #667eea 0%, #764ba2 100%)"
+    shadowColor="rgba(102, 126, 234, 0.3)"
+    shadowColorHover="rgba(102, 126, 234, 0.4)"
+    external={true}
+  />
+</div>
 
 ## How to Create a KIT
 
