--- a/docs/release/trg-10/trg-10-02.mdx
+++ b/docs/release/trg-10/trg-10-02.mdx
@@ -105,7 +105,6 @@ docs-kits/kits/
   <kit-name>/
     ├── README.md                          # Main KIT overview and quick start guide
     ├── CHANGELOG.md                       # Version history following semantic versioning
-    ├── CODEOWNERS                         # GitHub code ownership definitions
     ├── adoption-view/
     │   ├── _category_.json
     │   └── adoption-view.md               # Business value, use cases, policies, standards
@@ -117,7 +116,6 @@ docs-kits/kits/
     │   └── operations-view.md             # Deployment guides, monitoring, security, troubleshooting
     ├── industry-extensions/
     │   ├── _category_.json
-    │   ├── README.md                      # Industry extensions framework overview
     │   ├── automotive/
     │   │   ├── _category_.json
     │   │   └── overview.md                # Catena-X automotive-specific content
@@ -134,7 +132,8 @@ docs-kits/kits/
     │   ├── community-support.md           # Link to community support channels
     │   └── related-standards.md           # Links to related standards
     └── resources/
-        └── images/                        # KIT-specific images and diagrams
+        └── img/                           # KIT-specific images and diagrams
+        └── ...
 ```
 
 :::tip Template Available
