--- a/documentation/kit-lifecycle.mdx
+++ b/documentation/kit-lifecycle.mdx
@@ -23,7 +23,7 @@ title: KIT Lifecycle
 
 import { kitsData } from '../data/kitsData.js';
 import SchoolIcon from '@mui/icons-material/School';
-import ScienceIcon from '@mui/icons-material/Science';
+import LightbulbIcon from '@mui/icons-material/Lightbulb';
 import DeveloperModeIcon from '@mui/icons-material/DeveloperMode';
 import AssignmentIcon from '@mui/icons-material/Assignment';
 import RateReviewIcon from '@mui/icons-material/RateReview';
@@ -36,6 +36,9 @@ import Link from '@docusaurus/Link';
 import DeprecatedKitsList from '../src/components/2.0/KitAnalytics/DeprecatedKitsList.js';
 import ArtifactRequirementsTable from '@site/src/components/2.0/ArtifactRequirementsTable';
 import { artifactRequirementsData } from '@site/data/kitArtifactRequirementsData';
+import ThemedImage from '@theme/ThemedImage';
+import useBaseUrl from '@docusaurus/useBaseUrl';
+
 
 | Status     | Created      | Post-History                           |
 |------------|--------------|----------------------------------------|
@@ -43,16 +46,16 @@ import { artifactRequirementsData } from '@site/data/kitArtifactRequirementsData
 | Active     | 07-Nov-2025  | Updated maturity level framework       |
 
 export const MaturityIcon = ({ level, graduationStatus }) => {
-  if (level === 'Graduated') return <SchoolIcon sx={{ fontSize: 20, color: '#10b981' }} />;
+  if (level === 'Graduated') return <SchoolIcon sx={{ fontSize: 20, color: '#8246e1ff' }} />;
   if (level === 'Incubating') {
     const status = graduationStatus?.toLowerCase();
     if (status === 'draft') return <EditIcon sx={{ fontSize: 20, color: '#f59e0b' }} />;
     if (status === 'in progress' || status === 'inprogress') return <DeveloperModeIcon sx={{ fontSize: 20, color: '#3b82f6' }} />;
-    if (status === 'in review' || status === 'inreview') return <VisibilityIcon sx={{ fontSize: 20, color: '#8b5cf6' }} />;
-    return <AssignmentIcon sx={{ fontSize: 20, color: '#f59e0b' }} />;
+    if (status === 'in review' || status === 'inreview') return <VisibilityIcon sx={{ fontSize: 20, color: '#645cf6ff' }} />;
+    return <AssignmentIcon sx={{ fontSize: 20, color: '#72bd00ff' }} />;
   }
-  if (level === 'Sandbox') return <ScienceIcon sx={{ fontSize: 20, color: '#6b7280' }} />;
-  return <ScienceIcon sx={{ fontSize: 20, color: '#6b7280' }} />;
+  if (level === 'Sandbox') return <LightbulbIcon sx={{ fontSize: 20, color: '#f59e0b' }} />;
+  return <LightbulbIcon sx={{ fontSize: 20, color: '#f59e0b' }} />;
 };
 
 export const KitMaturityCard = ({ kit }) => (
@@ -171,11 +174,27 @@ export const MaturityLevelSection = ({ title, icon, description, kits, color }) 
   );
 };
 
-## KIT Lifecycle Framework
+## KIT Lifecycle Overview
+
+<div style={{ textAlign: 'left', margin: '20px 0', fontFamily: "Manrope, sans-serif" }}>
+  <ThemedImage
+    alt="KIT Framework Overview"
+    sources={{
+      light: useBaseUrl('/img/kits-2.0/tx-kit-lifecycle-white.svg'),
+      dark: useBaseUrl('/img/kits-2.0/tx-kit-lifecycle.svg'),
+    }}
+    style={{
+      maxWidth: '600px',
+      cursor: 'pointer',
+      fontFamily: "Manrope, sans-serif",
+    }}
+  />
+</div>
 
 The Tractus-X KIT ecosystem uses a comprehensive lifecycle framework to ensure quality, completeness, and real-world validation. KITs progress through distinct lifecycle stages: **Sandbox**, **Incubating** (with three sub-states), and **Graduated**.
 
-### Maturity Level Overview
+
+### Maturity Level Process
 
 ```mermaid
 graph TD
@@ -196,7 +215,9 @@ Each maturity level signals the quality, completeness, and proof that the use ca
 
 ## Detailed Maturity Levels
 
-### <ScienceIcon sx={{ fontSize: 24, color: '#6b7280', marginRight: '8px', verticalAlign: 'middle' }} /> Sandbox Level
+For more information look at the [TRG 10.03 - KIT Lifeclycle](https://eclipse-tractusx.github.io/docs/release/trg-10/trg-10-03) documentation.
+
+### <LightbulbIcon sx={{ fontSize: 24, color: '#f59e0b', marginRight: '8px', verticalAlign: 'middle' }} /> Sandbox Level
 
 **Purpose**: Initial exploration and community validation
 
@@ -208,8 +229,10 @@ Sandbox is the entry point for new KIT ideas. At this stage, the focus is on est
 - Community interest validation
 - Basic problem definition and domain identification
 - Foundation for future development
+- No standards a mandatory, just a clear business vision
+- Technical implementation proposal can already be done
 
-### <AssignmentIcon sx={{ fontSize: 24, color: '#f59e0b', marginRight: '8px', verticalAlign: 'middle' }} /> Incubating Level
+### <AssignmentIcon sx={{ fontSize: 24, color: '#72bd00ff', marginRight: '8px', verticalAlign: 'middle' }} /> Incubating Level
 
 **Purpose**: Active development with structured progression
 
@@ -233,7 +256,7 @@ Incubating represents the active development phase where KITs evolve from concep
 - **Activities**: Peer review, quality validation, compliance checking
 - **Deliverables**: Reviewed and approved artifacts, feedback incorporation
 
-### <SchoolIcon sx={{ fontSize: 24, color: '#10b981', marginRight: '8px', verticalAlign: 'middle' }} /> Graduated Level
+### <SchoolIcon sx={{ fontSize: 24, color: '#8246e1ff', marginRight: '8px', verticalAlign: 'middle' }} /> Graduated Level
 
 **Purpose**: Production-ready with proven real-world validation
 
@@ -244,7 +267,11 @@ Graduated is the highest maturity level, indicating that the KIT has passed comp
 - All mandatory artifacts completed and validated
 - Successful case study with community partner
 - Expert testing and approval completed
-- Production-ready with proven business value
+- Proven business value and clear technical implementation
+- Ready for operational deployment
+- Assigned Code Owner
+
+For more information look at the [TRG 10.04 - KIT Graduation Process](https://eclipse-tractusx.github.io/docs/release/trg-10/trg-10-04) documentation.
 
 ## Current KIT Portfolio by Lifecycle Stage
 
@@ -298,7 +325,7 @@ export const KitsByMaturityLevel = () => {
     <div>
       <MaturityLevelSection
         title="Graduated KITs"
-        icon={<SchoolIcon sx={{ fontSize: 28, color: '#10b981' }} />}
+        icon={<SchoolIcon sx={{ fontSize: 28, color: '#8246e1ff' }} />}
         description="Production-ready KITs with proven business value through community validation"
         kits={graduatedKits}
         color="#10b981"
@@ -327,90 +354,35 @@ export const KitsByMaturityLevel = () => {
       {incubatingKits.draft.length > 0 && (
         <MaturityLevelSection
           title="Incubating - Draft"
-          icon={<EditIcon sx={{ fontSize: 28, color: '#f59e0b' }} />}
+          icon={<EditIcon sx={{ fontSize: 28, color: '#72bd00ff' }} />}
           description="KITs in initial development phase with basic structure setup"
           kits={incubatingKits.draft}
-          color="#f59e0b"
+          color="#72bd00ff"
         />
       )}
 
       {incubatingKits.general.length > 0 && (
         <MaturityLevelSection
           title="Incubating KITs"
-          icon={<AssignmentIcon sx={{ fontSize: 28, color: '#f59e0b' }} />}
+          icon={<AssignmentIcon sx={{ fontSize: 28, color: '#72bd00ff' }} />}
           description="KITs in active development phase"
           kits={incubatingKits.general}
-          color="#f59e0b"
+          color="#72bd00ff"
         />
       )}
 
       <MaturityLevelSection
         title="Sandbox KITs"
-        icon={<ScienceIcon sx={{ fontSize: 28, color: '#6b7280' }} />}
+        icon={<LightbulbIcon sx={{ fontSize: 28, color: '#f59e0b' }} />}
         description="Early-stage KITs focusing on concept validation and community feedback"
         kits={sandboxKits}
-        color="#6b7280"
+        color="#f59e0b"
       />
     </div>
   );
 };
 
 <KitsByMaturityLevel />
-
-## Progression Requirements
-
-**Advancement Criteria**:
-
-- Complete all mandatory artifacts of current level
-- Fulfill at least one mandatory requirement of the next level
-- Pass quality review and community validation
-- For Graduated: Complete successful case study with community partner
-
-**Quality Gates**:
-
-Each transition involves review by committers who evaluate:
-
-- Artifact completeness and quality
-- Technical implementation standards
-- Documentation clarity and completeness
-- Community feedback and validation
-
-## Initiating a new KIT
-
-To start a KIT or to be in Sandbox phase you could also be in one of two categories.
-Option 1: High maturity. The reason to establish a KIT is clear, you have a scope and other interested companies in contributing to that KIT. Please go directly to Sandbox or Incubating stage.
-Option 2: You have an idea and want to see if there is any relevance for this KIT. You still need to find other interested companies for contributing to this KIT:
-
-1. Create a discussion in the SIG-Release repository under the "Ideas" category [SIG-Release repository - discussions](https://github.com/eclipse-tractusx/sig-release/discussions/categories/ideas ).
-2. Provide information on the industry problem that this KIT will solve and the domain it should be placed in.
-3. Seek feedback from the community and find other supporters (recommended four companies).
-4. Wait for approval from corresponding committer, who will review the repository and new KIT requests./
-Create request for new repository
-Once approved, you can start with the Sandbox or move directly into Incubating.
-
-## Sandbox Stage
-
-First step is Sandbox stage. This is the starting point of the three stages for a KIT. A defined vision and mission, and business value should be clearly established. In perspective this is a preview of a dormant business innovation. (Please see the mandatory artifacts list).
-Ensure the following steps have been addressed to be able to move onto the second phase: Most importantly, you need to be able to participate in open source.
-[Getting started to contribute to Tractus-X](https://eclipse-tractusx.github.io/docs/oss/getting-started/)
-If the KIT is directly ready to provide more than just a vision, mission and business value - than start directly with Incubating.
-
-### Steps
-
-- Step 1: Create an issue (template is available) within the following repository:[Tractus-X Github.io repository](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io)
-- Step 2: Check for the list of mandatory facts of the Sandbox phase
-- Step 3: Raise a pull request to the repository [Tractus-X Github.io repository](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io)
-- Step 4: Your artifacts will undergo an approval phase, quality checks will be done by the committers thereafter the approval phase
-
-## Incubating Stage
-
-The incubation phase requires to establish a fully functioning open-source project. Incubating is the first released version of a KIT that can be used for development.
-Steps of the Incubating phase:
-
-- Step 1: Create an issue within the following repository:[Tractus-X Github.io repository](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io)
-- Step 2: Check for the list of mandatory artifacts for this stage
-- Step 3: Raise a pull request to the repository ([Tractus-X Github.io repository](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io))
-- Step 4: Your artifacts will undergo an approval phase, quality checks will be done by the committers thereafter the approval phase
 
 ## Artifacts and Deliverables
 
@@ -433,11 +405,12 @@ This section provides an overview of required artifacts for each maturity level 
 - All mandatory artifacts completed
 - Implementation testing completed
 - Documentation review ready
+- Have a clear code owner assigned
 
 **In Review → Graduated**:
 
 - Pass community review process
-- Complete successful case study
+- Complete successful case study (success story)
 - Expert validation and approval
 
 ## Graduation Stage
@@ -445,140 +418,13 @@ This section provides an overview of required artifacts for each maturity level 
 How to graduate a KIT?
 Graduation is the highest quality level to achieve, all the artifacts in the table above should be completed. It has passed expert testing and been approved. Thereafter, please follow the next steps in how to graduate a KIT.
 
-### Step 1: Raise a issue to graduate
-
-[KIT issue](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/issues)
-You should provide information such as;
-
-1. KIT owner’s email address
-2. Solution provider / Developer’s email address
-3. The KIT name
-
-### Step 2: Kick off meeting
-
-1. Introduction into the graduation process
-2. What problems / challenges are you facing at the moment?
-3. Why is the development of this KIT so relevant for you? What opportunities do you see?
-4. What is in the Kick off meeting? (need to make the process slides : agenda so on)
-   1. Introduction of the people (adopter and developer)
-   2. Basic overview of the KIT (KIT-expert)
-   3. Process of the Graduation
-   4. Arrange two touch point meetings
-   5. Send out the feedback survey
-
-### Step 3: Start execution
-
-The solution provider starts on working with the KIT.
-
-### Step 4: Touch point meetings
-
-1st Touch point meeting (1 week after start of the execution)
-
-1. How long did it take to find the relevant information?
-2. What do you think should be the next thing to add to help your development to become easier and faster?
-3. Do you find the navigation through the pages user friendly? If not, how would you change the structure?
-4. Do you think your expected time frame will be met? If not, how much more time do you expect until completion?
-2nd touch point meeting (2,5 weeks after start)
-1.What were some of the difficulties faced when an outsider company tested it? If there were any.
-2.What are some additional remarks from the outside company testing that you would like to share with us?
-
-### Step 5: Feedback (survey and meeting)
-
-1. Why did you decide to participate in the KIT study?
-2. What were the objectives that needed to be met?
-3. What were your expectations?
-4. How long did it take you?
-5. How many FTEs did you need to integrate your service?
-6. Do you need other functions on the API?
-7. What major technical difficulties did you face during your tasks to prepare, register and get data?
-8. Where there any organizational challenges? If so, what were they?
-9. Anything else you would like to share with us?
-
-### Step 6: closing meeting
-
-Gathered information thus far. A presentation of the main points validating the KIT (summary presentation)
-
-### Step 7: Validation
-
-### Step 8: Publication
+- View the [TRG 10.04 - KIT Graduation Process](https://eclipse-tractusx.github.io/docs/release/trg-10/trg-10-04) documentation for detailed graduation requirements and process.
 
 ## KIT Deprecation
 
-### Overview
+- View the [TRG 10.05 - KIT Deprecation Process](https://eclipse-tractusx.github.io/docs/release/trg-10/trg-10-05) documentation for deprecation criteria and procedures.
 
-KIT deprecation is a structured process for phasing out KITs that are no longer maintained or aligned with the Tractus-X ecosystem. The process ensures users have time to migrate to alternatives.
-
-### Common Reasons for Deprecation
-
-- **Superseded**: A newer KIT covers the same use case
-- **Lack of Maintenance**: No longer actively maintained
-- **Technical Obsolescence**: Technology or approach is outdated
-- **Strategic Misalignment**: No longer fits Tractus-X priorities
-- **Security Issues**: Critical issues that cannot be resolved
-
-### Deprecation Process
-
-```mermaid
-graph LR
-    A[Active KIT] --> B[Announcement]
-    B --> C[Transition Period]
-    C --> D[End of Life]
-    D --> E[Archived]
-
-```
-
-#### Step 1: Announcement 
-
-1. Create deprecation issue in [sig-release](https://github.com/eclipse-tractusx/sig-release)
-2. Add deprecation notice to KIT documentation
-3. Mark KIT as "DEPRECATED" in master data
-4. Announce through blog post, KIT Matrix chat, and office hours
-
-**Required Information**:
-- Reason for deprecation
-- Timeline (typically 6-12 months)
-- Alternative solutions or migration paths
-- Support end date
-
-#### Step 2: Transition Period (2 Releases, ~6 Months)
-
-- Documentation remains accessible
-- Critical security fixes only (best effort)
-- Community support through existing channels
-- Optional: Migration office hours if widely adopted
-
-#### Step 3: End of Life (4 Releases, ~12 Months)
-
-- Archive documentation in [large-files repo](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io.largefiles)
-- Update all cross-references
-- Remove from active KIT listings
-
-### Deprecation Notice Template
-
-All deprecated KITs must display:
-
-```mdx
-:::danger KIT Deprecated
-Deprecated as of [DATE] • End of Life: [DATE]
-
-**Reason**: [Brief explanation]
-
-**Alternatives**: [Links to replacement solutions]
-
-**Support**: Critical security fixes only. Questions: [contact]
-:::
-```
-
-### Appeal Process
-
-Community members can appeal a deprecation by:
-
-1. Submitting an issue to [sig-release](https://github.com/eclipse-tractusx/sig-release)
-2. Providing evidence of active usage, maintenance commitment, and strategic value
-3. Committers review and decide within 30 days
-
-
-## Currently Deprecated KITs
+### Currently Deprecated KITs
 
 <DeprecatedKitsList />
 
