feat: fixed responsive issues and kit-template

--- a/documentation/kit-lifecycle.mdx
+++ b/documentation/kit-lifecycle.mdx
@@ -184,7 +184,9 @@ export const MaturityLevelSection = ({ title, icon, description, kits, color }) 
       dark: useBaseUrl('/img/kits-2.0/tx-kit-lifecycle.svg'),
     }}
     style={{
+      width: '100%',
       maxWidth: '600px',
+      height: 'auto',
       cursor: 'pointer',
       fontFamily: "Manrope, sans-serif",
     }}
