--- a/blog/2025-11-22-kit-2.0-architecture.mdx
+++ b/blog/2025-11-22-kit-2.0-architecture.mdx
@@ -88,15 +88,16 @@ Click in the architecture components to see a personalized views! Or continue sc
 
 <KitArchitectureDiagram />
 
+{/* Architecture Layer Descriptions */}
 
 <div style={{ display: 'flex', flexDirection: 'column', gap: '20px', margin: '30px 0' }}>
   <div style={{ display: 'flex', alignItems: 'flex-start', gap: '15px' }}>
     <VpnLockIcon sx={{ fontSize: 40, color: '#404040', marginTop: '5px' }} />
     <div>
       <strong style={{ fontSize: '1.1em', color: '#404040' }}>Dataspace Foundation</strong>
-      <p style={{ margin: '8px 0 0 0' }}>
+      <div style={{ margin: '8px 0 0 0' }}>
         The network basis for industrial dataspaces, providing core components required for maintaining interoperability. These KITs ensure secure, sovereign data exchange using dataspace technology - exchanging "bytes" without concern for specific data formats.
-      </p>
+      </div>
     </div>
   </div>
 
@@ -104,9 +105,9 @@ Click in the architecture components to see a personalized views! Or continue sc
     <FoundationIcon sx={{ fontSize: 40, color: '#0070C0', marginTop: '5px' }} />
     <div>
       <strong style={{ fontSize: '1.1em', color: '#0070C0' }}>Industry Core Foundation</strong>
-      <p style={{ margin: '8px 0 0 0' }}>
+      <div style={{ margin: '8px 0 0 0' }}>
         Common capabilities and standards shared across all use cases within any industry, enabling the new use cases of tomorrow. These KITs define core data models, digital twin concepts, and cross-functional services that enable building multiple use cases while maintaining interoperability and data consistency.
-      </p>
+      </div>
     </div>
   </div>
 
@@ -114,9 +115,9 @@ Click in the architecture components to see a personalized views! Or continue sc
     <AllInclusiveIcon sx={{ fontSize: 40, color: '#00c853', marginTop: '5px' }} />
     <div>
       <strong style={{ fontSize: '1.1em', color: '#00c853' }}>Cross-Industry Use Cases</strong>
-      <p style={{ margin: '8px 0 0 0' }}>
+      <div style={{ margin: '8px 0 0 0' }}>
         Business scenarios and challenges applicable across multiple industries. These KITs solve concrete problems related to sustainability, quality, supply chain management, and other horizontal concerns that span industry boundaries.
-      </p>
+      </div>
     </div>
   </div>
 
@@ -124,12 +125,14 @@ Click in the architecture components to see a personalized views! Or continue sc
     <PrecisionManufacturingIcon sx={{ fontSize: 40, color: '#ff6d00', marginTop: '5px' }} />
     <div>
       <strong style={{ fontSize: '1.1em', color: '#ff6d00' }}>Industry-Specific Use Cases</strong>
-      <p style={{ margin: '8px 0 0 0' }}>
+      <div style={{ margin: '8px 0 0 0' }}>
         Specialized solutions tailored to unique challenges of particular industries. These include dedicated implementations for Automotive, Shop Floor, Semiconductor, Construction, Chemical, and other vertical domains with industry-specific regulatory requirements and specialized functionality.
-      </p>
+      </div>
     </div>
   </div>
 </div>
+
+{/* End Architecture Layer Descriptions */}
 
 ---
 
@@ -333,14 +336,16 @@ Understanding the KIT lifecycle is crucial for contributors and users alike. Eac
 
 KITs progress through three distinct lifecycle stages, each with specific requirements and validation criteria:
 
+{/* Maturity Level Cards */}
+
 <div style={{ display: 'flex', alignItems: 'flex-start', gap: '15px', margin: '30px 0' }}>
   <LightbulbIcon sx={{ fontSize: 40, color: '#f59e0b', marginTop: '5px' }} />
   <div>
     <h4 style={{ margin: '0 0 8px 0', color: '#f59e0b' }}>Sandbox Level</h4>
-    <p style={{ margin: '8px 0' }}>
+    <div style={{ margin: '8px 0' }}>
       The <strong>Sandbox</strong> level is the entry point for new KIT ideas. At this stage, the focus is on establishing a clear vision, mission, and business value proposition. This level serves as a preview of potential business innovation and allows for community feedback and validation.
-    </p>
-    <p style={{ margin: '8px 0', fontSize: '14px' }}><strong>Key Characteristics:</strong></p>
+    </div>
+    <div style={{ margin: '8px 0', fontSize: '14px' }}><strong>Key Characteristics:</strong></div>
     <ul style={{ margin: '4px 0', paddingLeft: '20px', fontSize: '14px' }}>
       <li>Conceptual phase with defined vision and scope</li>
       <li>Community interest validation</li>
@@ -355,17 +360,17 @@ KITs progress through three distinct lifecycle stages, each with specific requir
   <BuildIcon sx={{ fontSize: 40, color: '#10b981', marginTop: '5px' }} />
   <div>
     <h4 style={{ margin: '0 0 8px 0', color: '#10b981' }}>Incubating Level</h4>
-    <p style={{ margin: '8px 0' }}>
+    <div style={{ margin: '8px 0' }}>
       <strong>Incubating</strong> represents the active development phase where KITs evolve from concept to functional implementation. This level includes <strong>three distinct sub-states</strong> that provide clear progression milestones:
-    </p>
+    </div>
     <ul style={{ margin: '8px 0', paddingLeft: '20px', fontSize: '14px' }}>
       <li><strong>Draft</strong>: Initial development and structure setup, basic artifact creation</li>
       <li><strong>In Progress</strong>: Active implementation, full artifact development, and testing</li>
       <li><strong>In Review</strong>: Quality assurance, peer review, and compliance checking</li>
     </ul>
-    <p style={{ margin: '8px 0', fontSize: '14px' }}>
+    <div style={{ margin: '8px 0', fontSize: '14px' }}>
       During incubation, KITs must complete all mandatory artifacts, including comprehensive documentation, API specifications, reference implementations, and test cases.
-    </p>
+    </div>
   </div>
 </div>
 
@@ -373,10 +378,10 @@ KITs progress through three distinct lifecycle stages, each with specific requir
   <SchoolIcon sx={{ fontSize: 40, color: '#8b5cf6', marginTop: '5px' }} />
   <div>
     <h4 style={{ margin: '0 0 8px 0', color: '#8b5cf6' }}>Graduated Level</h4>
-    <p style={{ margin: '8px 0' }}>
+    <div style={{ margin: '8px 0' }}>
       <strong>Graduated</strong> is the highest maturity level, indicating that the KIT has passed comprehensive testing, expert validation, and real-world case studies. These KITs are production-ready and have demonstrated business value through community adoption.
-    </p>
-    <p style={{ margin: '8px 0', fontSize: '14px' }}><strong>Requirements for Graduation:</strong></p>
+    </div>
+    <div style={{ margin: '8px 0', fontSize: '14px' }}><strong>Requirements for Graduation:</strong></div>
     <ul style={{ margin: '4px 0', paddingLeft: '20px', fontSize: '14px' }}>
       <li>All mandatory artifacts completed and validated</li>
       <li>Successful case study with community partner</li>
@@ -386,6 +391,8 @@ KITs progress through three distinct lifecycle stages, each with specific requir
     </ul>
   </div>
 </div>
+
+{/* End Maturity Level Cards */}
 
 ### Lifecycle Management
 
@@ -428,7 +435,7 @@ Each maturity level has specific artifact requirements that must be fulfilled fo
   />
 </div>
 
-Follow the KIT template to have an example of folder structure that can be followed following the [KIT Framework Guide](./kit-framework) and the needed content for each view in order to achieve all requirements from the [KIT Lifecycle](./kit-lifecycle).
+Follow the KIT template to have an example of folder structure that can be followed following the [KIT Framework Guide](/documentation/kit-framework) and the needed content for each view in order to achieve all requirements from the [KIT Lifecycle](/documentation/kit-lifecycle).
 
 <div style={{ display: 'flex', gap: '12px', justifyContent: 'left', marginTop: '20px', marginBottom: '20px', flexWrap: 'wrap' }}>
   <GradientButton 
@@ -463,9 +470,9 @@ KIT Office Hours are regular community sessions where you can:
 Office hours are held regularly and open to all community members. Whether you're just starting with KIT development or preparing for graduation review, the team is here to help.
 
 :::tip Join the Conversation
-Every Thursday at 10:00 AM CET - 10:30 AM CET!
+Every Thursday from 09:30 - 10:00 GMT+1
 
-Check the [Eclipse Tractus-X Community Calendar](https://eclipse-tractusx.github.io/community/intro) for upcoming KIT Office Hours sessions and join us!
+Check the [Eclipse Tractus-X Community Calendar](https://eclipse-tractusx.github.io/community/open-meetings/#Eclipse%20Tractus-X%20KITs%20Community%20Office%20Hour) for upcoming KIT Office Hours sessions and join us!
 :::
 
 ---
