Clarify documentation for non-file entries
Updated documentation to clarify that certain entries are not files and are optional links.

--- a/docs/release/trg-10/trg-10-02.mdx
+++ b/docs/release/trg-10/trg-10-02.mdx
@@ -103,8 +103,7 @@ The following folder structure represents a complete KIT template with all requi
 ```plaintext
 docs-kits/kits/
   <kit-name>/
-    ├── README.md                          # Main KIT overview and quick start guide
-    ├── CHANGELOG.md                       # Version history following semantic versioning
+    ├── changelog.md                       # Version history following semantic versioning
     ├── adoption-view/
     │   ├── _category_.json
     │   └── adoption-view.md               # Business value, use cases, policies, standards
@@ -127,10 +126,10 @@ docs-kits/kits/
     │   └── my-app.md                      # Template for implementation success stories
     ├── documentation/
     │   ├── _category_.json
-    │   ├── github-repository.md           # Link to GitHub repository
-    │   ├── api-documentation.md           # Link to API documentation
-    │   ├── community-support.md           # Link to community support channels
-    │   └── related-standards.md           # Links to related standards
+    │   ├── github-repository              # NOT A FILE (OPTIONAL): External Link to GitHub repository
+    │   ├── api-documentation              # NOT A FILE OPTIONAL: Link to API documentation
+    │   ├── community-support              # NOT A FILE OPTIONAL: Link to community support channels
+    │   └── related-standards              # NOT A FILE OPTIONAL: Links to related standards
     └── resources/
         └── img/                           # KIT-specific images and diagrams
         └── ...
